<resources>
    <string name="app_name">FirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="str">Happy Birthday!</string>
    <string name="from">Yours Tom</string>
    <string name="background">cat_background</string>
    <!-- Strings used for fragments for navigation -->
    <string name="secApp_name">SecondApp</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_txt">Input degrees Celsius here......</string>
    <string name="btn_label1">conversion</string>
    <string name="btn_label2">conversion(minus)</string>
    <string name="reset_btn">reset</string>
    <string name="label_add3">+3 point</string>
    <string name="label_add2">+2 point</string>
    <string name="label_add1">+1 point</string>
    <string name="showText">Temperature</string>


    <string name="rate_app_name">Rate</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_RMB_label">RMB</string>
    <string name="rmb_hint">Input RMB…</string>

    <string name="btn_opencfg_label">config</string>
    <string name="btn_save_label">save</string>
    <string name="label_open_list">OpenList</string>
    <string name="inpKeyword">Input keywords…</string>
    <string name="newsSearch">Search</string>
    <string name="emptyList">No Data...</string>
</resources>
